[tool.poetry]
name = "costa-utils"
version = "0.1.1"
description = ""
authors = ["Costa Huang"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
datasets = "^2.20.0"
tyro = "^0.8.5"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
